--- a/src/login/login.html
+++ b/src/login/login.html
@@ -10,7 +10,7 @@
       href="/src/assets/favicon/likelion.ico"
       type="image/x-icon"
     />
-    <link rel="icon" href="/src/assets/favicon/likelion.svg" />
+    <link rel="icon" href="./src/assets/favicon/likelion.svg" />
     <link
       rel="stylesheet"
       as="style"
