--- a/index.html
+++ b/index.html
@@ -77,19 +77,17 @@
   </head>
   <body>
     <div class="profile-card">
-      <img
-        src="./src/assets/images/jiwon.jpeg"
-        alt=""
-        class="profile-image"
-      />
+      <img src="./src/assets/images/jiwon.jpeg" alt="" class="profile-image" />
       <h1 class="name">남유지</h1>
       <p class="bio">멋쟁이 사자처럼 프론트엔드 부트캠프 13기 슬비쌤 입니다.</p>
       <p>과제 결과는 링크를 선택해주세요.</p>
       <ul class="homework-links">
-        <li><a href="./src/md/markdown.md">마크다운 문법</a></li>
+        <!-- <li><a href="./src/md/markdown.md">마크다운 문법</a></li>
         <li><a href="./src/md/retrospect.md">회고</a</li>
           <li><a href="./src/avatars/avatars.html">아바타 이미지</a></li>
-        <li><a href="./src/login/login.html">login</a></li>
+        <li><a href="./src/login/login.html">login</a></li> -->
+        <li><a href="./src/apple/apple.html">apple</a></li>
+        <li><a href="./src/apple/card-component.html">카드 컴포넌트</a></li>
       </ul>
     </div>
   </body>
