--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <li><a href="./src/avatars/avatars.html">아바타 이미지</a></li>
         <li><a href="./src/login/login.html">login</a></li>
         <li><a href="./src/apple/apple.html">apple</a></li>
-       <li><a href="./src/apple/apple.md"></a></li>
+       <li><a href="./src/apple/apple.md">회고</a></li>
       </ul>
     </div>
   </body>
